# sos-journaler

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.rst  config.py  docker-compose.yml  influxdb_utils.py  log.py  main.py  message_handling.py  pyproject.toml  transfer.py
scripts/: find_nearby_airplanes.py  parser_example.py  write_to_influxdb.py
sos_journaler/: __init__.py  config.py  database.py  message_handling.py  transfer.py  transfer_hooks.py
